# chat_websocket

./: FCE_WEBSOCKET_LINKS.txt  FRC_PROJETOFINAL_LINKS.txt  README.md  __init__.py  app.py  pyproject.toml
app/: __init__.py  manager.py  server.py
arquivos_config/apache2/conf-available/: ssl-params.conf
arquivos_config/apache2/sites-available/: trabalhofinalfrc-ssl.conf
arquivos_config/bind/: db.trabalhofinal.com  named.conf.local
chat_frc/: app.py  client.py  db.py
chat_frc/templates/: cadastro.html  chat.html  cria_salas.html  index.html  login.html
db/: __init__.py  db.py
static/: __init__.py  room.py  user.py
templates/: chat.html  chat_T.html  index.html
