[tool.poetry]
name = "chat-websocket"
version = "0.1.0"
description = ""
authors = ["frmiza <mizzaelsantos1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bson = "^0.5.10"
flask = "^3.0.0"
flask-socketio = "^5.3.6"
eventlet = "^0.34.1"
pymongo = "^4.6.1"
flask-login = "^0.6.3"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
